--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-	<head>
-    	<meta charset="UTF-8">
-    	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-    	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Coito</title>
-	</head>
-	<body>
-		<h1>Sei lá</h1>
-		<h2>Aula de Programação</h2>
-		<p>&nbsp;</p>
-		<p>Esta é a minha página pessoal de apresentação dos conteudos
-			estudados na disciplina de programação I
-		</p>
-	</body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sei lá</title>
+</head>
+<body>
+    <h1>Sei lá</h1>
+    <h2>Aula de Programação</h2>
+    <p>&nbsp;</p>
+    <p>Esta é a minha página pessoal de apresentação dos conteudos
+        estudados na disciplina de programação I
+    </p>
+    
+</body>
 </html>
